k8s/apps/search-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-worker
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-worker
  template:
    metadata:
      labels:
        app: search-worker
    spec:
      containers:
      - name: search-worker
        image: search-worker:latest
        imagePullPolicy: IfNotPresent
