k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  rules:
  - host: ecommerce.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-api-explicit-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.ecommerce.local
    http:
      paths:
      - path: /api/(auth)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/(products)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 3001
      - path: /api/(orders)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service
            port:
              number: 3002
      - path: /api/(payments)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-service
            port:
              number: 3003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-search-ingress
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /products/_search
spec:
  ingressClassName: nginx
  rules:
  - host: api.ecommerce.local
    http:
      paths:
      - path: /api/search
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-service
            port:
              number: 9200
